# kcdevice

./: .gitignore  DASHBOARD_CHANGES.md  README.md  build.ps1  hookshot-test-20260228201100.txt  sdkconfig.c6  sdkconfig.s3  sdkconfig.s3.old  sdlogs.json  size_report.json  size_tree.txt  tmp_dashboard.js  upload_web_files_http.py
build_c6/: .bin_timestamp  .ninja_deps  .ninja_log  project_description.json
build_c6/bootloader/: .ninja_log
build_c6/log/: idf_py_stderr_output_126696  idf_py_stdout_output_126696  idf_py_stdout_output_128932
build_s3/: .bin_timestamp  .ninja_deps  .ninja_log  CMakeCache.txt  cmake_install.cmake  config.env  dashboard.css.S  dashboard.js.S  index.html.S  kconfigs.in  kconfigs_projbuild.in  ldgen_libraries  project_description.json  x509_crt_bundle.S
build_s3/bootloader/: .bin_timestamp  .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  config.env  project_description.json
build_s3/bootloader-prefix/tmp/: bootloader-cfgcmd.txt  bootloader-mkdirs.cmake
build_s3/bootloader/config/: sdkconfig.cmake  sdkconfig.h  sdkconfig.json
build_s3/bootloader/esp-idf/: cmake_install.cmake
build_s3/bootloader/gdbinit/: gdbinit  symbols
build_s3/config/: kconfig_menus.json  sdkconfig.cmake  sdkconfig.h  sdkconfig.json
build_s3/esp-idf/: cmake_install.cmake
build_s3/esp-idf/esp_hw_support/: cmake_install.cmake
build_s3/esp-idf/esp_psram/: cmake_install.cmake
build_s3/esp-idf/esp_system/: cmake_install.cmake
build_s3/esp-idf/espressif__mdns/: cmake_install.cmake
build_s3/esp-idf/main/: cmake_install.cmake
build_s3/gdbinit/: gdbinit  symbols
build_s3/log/: idf_py_stdout_output_103736  idf_py_stdout_output_116444  idf_py_stdout_output_116912  idf_py_stdout_output_117136  idf_py_stdout_output_119064  idf_py_stdout_output_121240  idf_py_stdout_output_122508  idf_py_stdout_output_126760  idf_py_stdout_output_129556  idf_py_stdout_output_129828  idf_py_stdout_output_130704  idf_py_stdout_output_131676  idf_py_stdout_output_134344  idf_py_stdout_output_138104  idf_py_stdout_output_139352  idf_py_stdout_output_140820  idf_py_stdout_output_141368  idf_py_stdout_output_142292  idf_py_stdout_output_155168  idf_py_stdout_output_163672  idf_py_stdout_output_164820  idf_py_stdout_output_167496  idf_py_stdout_output_170876  idf_py_stdout_output_174268  idf_py_stdout_output_174484  idf_py_stdout_output_177068  idf_py_stdout_output_179096  idf_py_stdout_output_180748  idf_py_stdout_output_182600  idf_py_stdout_output_183592  idf_py_stdout_output_183740  idf_py_stdout_output_183876  idf_py_stdout_output_185756  idf_py_stdout_output_187212  idf_py_stdout_output_189120  idf_py_stdout_output_189516  idf_py_stdout_output_195444  idf_py_stdout_output_21784  idf_py_stdout_output_226584  idf_py_stdout_output_229408  (+18 more)
config/: partitions.csv  sdkconfig.defaults  sdkconfig.esp32c6
config/runtime/: api_keys.json  sensor_profiles.json  services.json
docs/: BOOT_ARCHITECTURE.md  PARALLEL_SENSOR_IMPLEMENTATION.md  PROJECT_STRUCTURE.md  README.md  REORGANIZATION_PLAN.md  REST_API_REFERENCE.md  TELEMETRY_DIAGNOSTICS.md  connectivity_recovery_plan.md  dashboard-log-plan.md
docs/refactoring/: PHASE_1_FILES_CHANGED.md  PHASE_1_QUICK_WINS.md  PHASE_2_ERROR_HANDLING.md  PHASE_2_USAGE_EXAMPLES.md  PHASE_2_WIFI_MANAGER_REFACTORING.md  REFACTORING_LOG.md
main/: CMakeLists.txt  Kconfig.projbuild  cloud_provisioning.c  cloud_provisioning.h  ezo_sensor.c  ezo_sensor.h  http_server.c  main.c  mqtt_telemetry.c  mqtt_telemetry.h  sensor_manager.c  sensor_manager.h  wifi_manager.c
main/boot/: boot_config.h  boot_coordinator.c  boot_coordinator.h  boot_handlers.c  boot_handlers.h  boot_monitor.c  boot_monitor.h
main/common/: error_handler.c  error_handler.h  secure_logging.c  secure_logging.h
main/config/: runtime_config.c  runtime_config.h
main/http/: http_handlers_sensors.c  http_handlers_sensors.h  http_websocket.c  http_websocket.h
main/network/: connectivity_watchdog.c  connectivity_watchdog.h  network_boot.c  network_boot.h
main/platform/: chip_info.c  chip_info.h  i2c_scanner.c  i2c_scanner.h  reset_button.c  reset_button.h  security.c  security.h
main/provisioning/: idf_provisioning.c  idf_provisioning.h  provisioning_runner.c  provisioning_runner.h  provisioning_state.c  provisioning_state.h  provisioning_wifi_ops.h  provisioning_wifi_ops_default.c  wifi_manager.c  wifi_manager.h
main/sensors/: config.c  config.h  pipeline.c  pipeline.h  sensor_boot.c  sensor_boot.h  sensor_manager.c
main/sensors/drivers/: ezo_sensor.c  max17048.c  max17048.h
main/services/: README.md
main/services/core/: services.c  services.h  services_config.c  services_config.h  services_provisioning_bridge.c  services_provisioning_bridge.h
main/services/discovery/: mdns_service.c  mdns_service.h
main/services/http/: http_handlers_sensors.c  http_handlers_sensors.h  http_server.c  http_server.h  http_websocket.c  http_websocket.h  web_file_editor.c  web_file_editor.h
main/services/keys/: api_key_manager.c  api_key_manager.h
main/services/logging/: log_history.c  log_history.h
main/services/provisioning/: cloud_provisioning.c  cloud_provisioning.h
main/services/telemetry/: mqtt_connection_controller.c  mqtt_connection_controller.h  mqtt_connection_watchdog.c  mqtt_connection_watchdog.h  mqtt_payload_builder.c  mqtt_payload_builder.h  mqtt_publish_loop.c  mqtt_publish_loop.h  mqtt_publish_scheduler.c  mqtt_publish_scheduler.h  mqtt_telemetry.c  mqtt_telemetry.h  telemetry_pipeline.c  telemetry_pipeline.h
main/services/time_sync/: time_sync.c  time_sync.h
main/storage/: sd_logger.c  sd_logger.h
main/web/: dashboard.css  dashboard.js  index.html
test/: test_batch_config.py
test/host/: README.md  mqtt_scheduler_sim.py  mqtt_watchdog_sim.py  provisioning_sim.py  test_mqtt_scheduler.py  test_mqtt_watchdog_sim.py  test_provisioning_state_stub.py
tools/: generate_runtime_config_hash.py  live_diag_report.py  mqtt_status_probe.py  validate_runtime_config.py  validate_sensor_profiles.py  ws_diag.py
(+6 files in other folders)
